deps/v8/test/message/fail/modules-stalled-top-level-await.out
# Copyright 2022 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*:5: Error: Top-level await promise never resolved
await new Promise(() => {});
^
Error: Top-level await promise never resolved
